[package]
name = "roguelike_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_ascii_terminal = "0.17.0"
bevy_screen_diagnostics = "0.8.1"
bracket-random = "0.8.7"
dotenv = "0.15.0"
env_logger = { version = "0.11.8" }
log = "0.4.27"
thiserror = "2.0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
